k8s_hybrid/k8s/traefik/example/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: nginx
    namespace: default
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`www.nginx-example.henn.dev`)
          kind: Rule
          services:
              - name: nginx
                port: 80
        - match: Host(`nginx-example.henn.dev`)
          kind: Rule
          services:
              - name: nginx
                port: 80
          middlewares:
              - name: default-headers
    tls:
        secretName: cert-tls
